# cpp_opencv_kmeans_tutorial

./: CMakeLists.txt  ch1_meow.cpp  ch2_opencv.cpp  ch3_cpp_basic.cpp  ch4_cpp_intermediate.cpp  ch5_cpp_hard.cpp  ch6_kmeans.cpp  readme.md  test.cpp
kmeans/: kmeans.cpp  kmeans.hpp
